# nexus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  agents.py  config.py  extraction_core.py  logging_utils.py  main.py  mcp_session.py  prompts.py  pyproject.toml  pytest.ini  schemas.py  sources.py
tests/: __init__.py  test_extraction.py  test_schemas.py
